[gd_scene load_steps=27 format=2]

[ext_resource path="res://tiels normnal.tres" type="TileSet" id=1]
[ext_resource path="res://art/bg.png" type="Texture" id=2]
[ext_resource path="res://player.tscn" type="PackedScene" id=3]
[ext_resource path="res://spikes.tres" type="TileSet" id=4]
[ext_resource path="res://runner.tscn" type="PackedScene" id=5]
[ext_resource path="res://mushroom2.tscn" type="PackedScene" id=6]
[ext_resource path="res://mushroom3.tscn" type="PackedScene" id=7]
[ext_resource path="res://mushroom1.tscn" type="PackedScene" id=8]
[ext_resource path="res://big grass.tscn" type="PackedScene" id=9]
[ext_resource path="res://art/tutorials/tut dash forward.png" type="Texture" id=10]
[ext_resource path="res://art/tutorials/tut dash.png" type="Texture" id=11]
[ext_resource path="res://lvl1.gd" type="Script" id=12]
[ext_resource path="res://art/transitions/tran SITION.png" type="Texture" id=13]
[ext_resource path="res://big mushroom1.tscn" type="PackedScene" id=14]
[ext_resource path="res://bgtiles.tres" type="TileSet" id=15]
[ext_resource path="res://sound/hits/zapsplat_impacts_body_hit_baseball_bat_hard_whack_crack_squelchy_bloody_005_44151.wav" type="AudioStream" id=16]
[ext_resource path="res://ScreenShake.tscn" type="PackedScene" id=17]
[ext_resource path="res://transitionshader.tscn" type="PackedScene" id=18]
[ext_resource path="res://HealthHUD.tscn" type="PackedScene" id=19]
[ext_resource path="res://newroomexplo.tscn" type="PackedScene" id=20]
[ext_resource path="res://eyelazer.tscn" type="PackedScene" id=21]

[sub_resource type="Animation" id=1]
resource_name = "tranisiotn in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("traanisiton sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 534.632, 303.103 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.2

[sub_resource type="Animation" id=3]
length = 0.2

[sub_resource type="Environment" id=4]
background_mode = 4
glow_intensity = 0.3
glow_blend_mode = 0
glow_bicubic_upscale = true

[sub_resource type="RectangleShape2D" id=5]

[node name="lvl1" type="Node2D"]
script = ExtResource( 12 )

[node name="tiles" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 4
collision_mask = 65
format = 1
tile_data = PoolIntArray( -589828, 0, 0, -589827, 0, 1, -589826, 0, 1, -589825, 0, 1, -655360, 0, 1, -655359, 0, 1, -655358, 0, 1, -655357, 0, 1, -655356, 0, 1, -655355, 0, 1, -655354, 0, 1, -655353, 0, 1, -655352, 0, 1, -655351, 0, 1, -655350, 0, 1, -655349, 0, 1, -655348, 0, 1, -655347, 0, 1, -655346, 0, 1, -655345, 0, 1, -655344, 0, 1, -655343, 0, 1, -655342, 0, 1, -655341, 0, 1, -655340, 0, 1, -655339, 0, 1, -655338, 0, 1, -655337, 0, 1, -655336, 0, 1, -655335, 0, 1, -655334, 0, 1, -655333, 0, 1, -655332, 0, 1, -655331, 0, 1, -655330, 0, 1, -655329, 0, 1, -655328, 0, 1, -655327, 0, 1, -655326, 0, 2, -524292, 0, 65536, -524291, 0, 65537, -524290, 0, 65537, -524289, 0, 65537, -589824, 0, 65537, -589823, 0, 65537, -589822, 0, 65537, -589821, 0, 65537, -589820, 0, 65537, -589819, 0, 65537, -589818, 0, 65537, -589817, 0, 65537, -589816, 0, 65537, -589815, 0, 65537, -589814, 0, 65537, -589813, 0, 65537, -589812, 0, 65537, -589811, 0, 65537, -589810, 0, 65537, -589809, 0, 65537, -589808, 0, 65537, -589807, 0, 65537, -589806, 0, 65537, -589805, 0, 65537, -589804, 0, 65537, -589803, 0, 65537, -589802, 0, 65537, -589801, 0, 65537, -589800, 0, 65537, -589799, 0, 65537, -589798, 0, 65537, -589797, 0, 65537, -589796, 0, 65537, -589795, 0, 65537, -589794, 0, 65537, -589793, 0, 65537, -589792, 0, 65537, -589791, 0, 65537, -589790, 0, 65538, -458756, 0, 65536, -458755, 0, 65537, -458754, 0, 65537, -458753, 0, 65537, -524288, 0, 65537, -524287, 0, 65537, -524286, 0, 65537, -524285, 0, 65537, -524284, 0, 65537, -524283, 0, 65537, -524282, 0, 65537, -524281, 0, 65537, -524280, 0, 65537, -524279, 0, 65537, -524278, 0, 65537, -524277, 0, 65537, -524276, 0, 65537, -524275, 0, 65537, -524274, 0, 65537, -524273, 0, 65537, -524272, 0, 65537, -524271, 0, 65537, -524270, 0, 65537, -524269, 0, 65537, -524268, 0, 65537, -524267, 0, 65537, -524266, 0, 65537, -524265, 0, 65537, -524264, 0, 65537, -524263, 0, 65537, -524262, 0, 65537, -524261, 0, 65537, -524260, 0, 65537, -524259, 0, 65537, -524258, 0, 65537, -524257, 0, 65537, -524256, 0, 65537, -524255, 0, 65537, -524254, 0, 65538, -393220, 0, 65536, -393219, 0, 65537, -393218, 0, 65537, -393217, 0, 65537, -458752, 0, 65537, -458751, 0, 65537, -458750, 0, 65537, -458749, 0, 65537, -458748, 0, 65537, -458747, 0, 65537, -458746, 0, 65537, -458745, 0, 65537, -458744, 0, 65537, -458743, 0, 65537, -458742, 0, 65537, -458741, 0, 65537, -458740, 0, 65537, -458739, 0, 65537, -458738, 0, 65537, -458737, 0, 65537, -458736, 0, 65537, -458735, 0, 65537, -458734, 0, 65537, -458733, 0, 65537, -458732, 0, 65537, -458731, 0, 65537, -458730, 0, 65537, -458729, 0, 65537, -458728, 0, 65537, -458727, 0, 65537, -458726, 0, 65537, -458725, 0, 65537, -458724, 0, 65537, -458723, 0, 65537, -458722, 0, 65537, -458721, 0, 65537, -458720, 0, 65537, -458719, 0, 65537, -458718, 0, 65538, -327684, 0, 65536, -327683, 0, 65537, -327682, 0, 65537, -327681, 0, 65537, -393216, 0, 65537, -393215, 0, 65537, -393214, 0, 65537, -393213, 0, 65537, -393212, 0, 65537, -393211, 0, 65537, -393210, 0, 65537, -393209, 0, 65537, -393208, 0, 65537, -393207, 0, 65537, -393206, 0, 65537, -393205, 0, 65537, -393204, 0, 65537, -393203, 0, 65537, -393202, 0, 65537, -393201, 0, 65537, -393200, 0, 65537, -393199, 0, 65537, -393198, 0, 65537, -393197, 0, 65537, -393196, 0, 65537, -393195, 0, 65537, -393194, 0, 65537, -393193, 0, 65537, -393192, 0, 65537, -393191, 0, 65537, -393190, 0, 65537, -393189, 0, 65537, -393188, 0, 65537, -393187, 0, 65537, -393186, 0, 65537, -393185, 0, 65537, -393184, 0, 65537, -393183, 0, 65537, -393182, 0, 65538, -262148, 0, 65536, -262147, 0, 65537, -262146, 0, 65537, -262145, 0, 65537, -327680, 0, 65537, -327679, 0, 65537, -327678, 0, 65537, -327677, 0, 65537, -327676, 0, 65537, -327675, 0, 65537, -327674, 0, 65537, -327673, 0, 65537, -327672, 0, 65537, -327671, 0, 65537, -327670, 0, 65537, -327669, 0, 65537, -327668, 0, 65537, -327667, 0, 65537, -327666, 0, 65537, -327665, 0, 65537, -327664, 0, 65537, -327663, 0, 65537, -327662, 0, 65537, -327661, 0, 65537, -327660, 0, 65537, -327659, 0, 65537, -327658, 0, 65537, -327657, 0, 65537, -327656, 0, 65537, -327655, 0, 65537, -327654, 0, 65537, -327653, 0, 65537, -327652, 0, 65537, -327651, 0, 65537, -327650, 0, 65537, -327649, 0, 65537, -327648, 0, 65537, -327647, 0, 65537, -327646, 0, 65538, -196612, 0, 65536, -196611, 0, 65537, -196610, 0, 65537, -196609, 0, 65537, -262144, 0, 65537, -262143, 0, 65537, -262142, 0, 65537, -262141, 0, 65537, -262140, 0, 65537, -262139, 0, 65537, -262138, 0, 65537, -262137, 0, 65537, -262136, 0, 65537, -262135, 0, 65537, -262134, 0, 65537, -262133, 0, 65537, -262132, 0, 65537, -262131, 0, 65537, -262130, 0, 65537, -262129, 0, 65537, -262128, 0, 65537, -262127, 0, 65537, -262126, 0, 65537, -262125, 0, 65537, -262124, 0, 65537, -262123, 0, 65537, -262122, 0, 65537, -262121, 0, 65537, -262120, 0, 65537, -262119, 0, 65537, -262118, 0, 65537, -262117, 0, 65537, -262116, 0, 65537, -262115, 0, 65537, -262114, 0, 65537, -262113, 0, 65537, -262112, 0, 65537, -262111, 0, 65537, -262110, 0, 65538, -131076, 0, 65536, -131075, 0, 65537, -131074, 0, 65537, -131073, 0, 65537, -196608, 0, 65537, -196607, 0, 65537, -196606, 0, 65537, -196605, 0, 65537, -196604, 0, 65537, -196603, 0, 65537, -196602, 0, 65537, -196601, 0, 65537, -196600, 0, 65537, -196599, 0, 65537, -196598, 0, 65537, -196597, 0, 65537, -196596, 0, 65537, -196595, 0, 65537, -196594, 0, 65537, -196593, 0, 65537, -196592, 0, 65537, -196591, 0, 65537, -196590, 0, 65537, -196589, 0, 65537, -196588, 0, 65537, -196587, 0, 65537, -196586, 0, 65537, -196585, 0, 65537, -196584, 0, 65537, -196583, 0, 65537, -196582, 0, 65537, -196581, 0, 65537, -196580, 0, 65537, -196579, 0, 65537, -196578, 0, 65537, -196577, 0, 65537, -196576, 0, 65537, -196575, 0, 65537, -196574, 0, 65538, -65540, 0, 65536, -65539, 0, 65537, -65538, 0, 65537, -65537, 0, 65537, -131072, 0, 65537, -131071, 0, 65537, -131070, 0, 65537, -131069, 0, 65537, -131068, 0, 65537, -131067, 0, 65537, -131066, 0, 65537, -131065, 0, 65537, -131064, 0, 65537, -131063, 0, 65537, -131062, 0, 65537, -131061, 0, 65537, -131060, 0, 65537, -131059, 0, 65537, -131058, 0, 65537, -131057, 0, 65537, -131056, 0, 65537, -131055, 0, 65537, -131054, 0, 65537, -131053, 0, 65537, -131052, 0, 65537, -131051, 0, 65537, -131050, 0, 65537, -131049, 0, 65537, -131048, 0, 65537, -131047, 0, 65537, -131046, 0, 65537, -131045, 0, 65537, -131044, 0, 65537, -131043, 0, 65537, -131042, 0, 65537, -131041, 0, 65537, -131040, 0, 65537, -131039, 0, 65537, -131038, 0, 65538, -4, 0, 65536, -3, 0, 65537, -2, 0, 65537, -1, 0, 65537, -65536, 0, 65537, -65535, 0, 65537, -65534, 0, 65537, -65533, 0, 65537, -65532, 0, 65537, -65531, 0, 65537, -65530, 0, 65537, -65529, 0, 65537, -65528, 0, 65537, -65527, 0, 65537, -65526, 0, 65537, -65525, 0, 65537, -65524, 0, 65537, -65523, 0, 65537, -65522, 0, 65537, -65521, 0, 65537, -65520, 0, 65537, -65519, 0, 65537, -65518, 0, 65537, -65517, 0, 65537, -65516, 0, 65537, -65515, 0, 65537, -65514, 0, 65537, -65513, 0, 65537, -65512, 0, 65537, -65511, 0, 65537, -65510, 0, 65537, -65509, 0, 65537, -65508, 0, 65537, -65507, 0, 65537, -65506, 0, 65537, -65505, 0, 65537, -65504, 0, 65537, -65503, 0, 65537, -65502, 0, 65538, 65532, 0, 65536, 65533, 0, 65537, 65534, 0, 65537, 65535, 0, 65537, 0, 0, 131075, 1, 0, 131073, 2, 0, 131073, 3, 0, 131073, 4, 0, 131073, 5, 0, 131073, 6, 0, 131073, 7, 0, 131073, 8, 0, 131073, 9, 0, 131073, 10, 0, 131073, 11, 0, 131073, 12, 0, 131073, 13, 0, 131073, 14, 0, 131073, 15, 0, 131073, 16, 0, 131073, 17, 0, 131073, 18, 0, 131073, 19, 0, 131073, 20, 0, 131073, 21, 0, 131073, 22, 0, 131073, 23, 0, 131073, 24, 0, 131073, 25, 0, 131073, 26, 0, 131073, 27, 0, 131073, 28, 0, 131073, 29, 0, 131073, 30, 0, 131073, 31, 0, 131073, 32, 0, 3, 33, 0, 65537, 34, 0, 65538, 131068, 0, 65536, 131069, 0, 65537, 131070, 0, 65537, 131071, 0, 65537, 65536, 0, 65538, 65538, 2, 0, 65541, 2, 0, 65551, 2, 0, 65559, 2, 0, 65568, 0, 65536, 65569, 0, 65537, 65570, 0, 65538, 196604, 0, 65536, 196605, 0, 65537, 196606, 0, 65537, 196607, 0, 65537, 131072, 0, 65538, 131104, 0, 65536, 131105, 0, 65537, 131106, 0, 65538, 262140, 0, 65536, 262141, 0, 65537, 262142, 0, 65537, 262143, 0, 65537, 196608, 0, 65538, 196640, 0, 65536, 196641, 0, 65537, 196642, 0, 65538, 327676, 0, 65536, 327677, 0, 65537, 327678, 0, 65537, 327679, 0, 65537, 262144, 0, 65538, 262176, 0, 65536, 262177, 0, 65537, 262178, 0, 65538, 393212, 0, 65536, 393213, 0, 65537, 393214, 0, 65537, 393215, 0, 65537, 327680, 0, 65538, 327712, 0, 65536, 327713, 0, 65537, 327714, 0, 65538, 458748, 0, 65536, 458749, 0, 65537, 458750, 0, 65537, 458751, 0, 65537, 393216, 0, 65538, 393248, 0, 65536, 393249, 0, 65537, 393250, 0, 65538, 524284, 0, 65536, 524285, 0, 65537, 524286, 0, 65537, 524287, 0, 65537, 458752, 0, 65538, 458784, 0, 65536, 458785, 0, 65537, 458786, 0, 65538, 589820, 0, 65536, 589821, 0, 65537, 589822, 0, 65537, 589823, 0, 65537, 524288, 0, 65538, 524309, 0, 0, 524310, 0, 1, 524311, 0, 1, 524312, 0, 1, 524313, 0, 2, 524320, 0, 131072, 524321, 0, 131073, 524322, 0, 131074, 655356, 0, 65536, 655357, 0, 65537, 655358, 0, 65537, 655359, 0, 65537, 589824, 0, 65538, 589837, 0, 0, 589838, 0, 2, 589845, 0, 131072, 589846, 0, 131073, 589847, 0, 131073, 589848, 0, 131073, 589849, 0, 131074, 589858, 0, 0, 720892, 0, 65536, 720893, 0, 65537, 720894, 0, 65537, 720895, 0, 65537, 655360, 0, 65538, 655373, 0, 131072, 655374, 0, 131074, 655382, 2, 0, 655383, 2, 0, 655394, 0, 0, 786428, 0, 65536, 786429, 0, 65537, 786430, 0, 65537, 786431, 0, 65537, 720896, 0, 65538, 720910, 2, 0, 720928, 0, 0, 720929, 0, 1, 720930, 0, 2, 851964, 0, 65536, 851965, 0, 65537, 851966, 0, 65537, 851967, 0, 65537, 786432, 0, 65538, 786464, 0, 65536, 786465, 0, 65537, 786466, 0, 65538, 917500, 0, 65536, 917501, 0, 65537, 917502, 0, 65537, 917503, 0, 65537, 851968, 0, 65539, 851969, 0, 1, 851970, 0, 1, 851971, 0, 1, 851972, 0, 1, 851973, 0, 1, 851974, 0, 2, 852000, 0, 65536, 852001, 0, 65537, 852002, 0, 65538, 983036, 0, 65536, 983037, 0, 65537, 983038, 0, 65537, 983039, 0, 65537, 917504, 0, 65537, 917505, 0, 65537, 917506, 0, 65537, 917507, 0, 65537, 917508, 0, 65537, 917509, 0, 65537, 917510, 0, 65539, 917511, 0, 2, 917536, 0, 65536, 917537, 0, 65537, 917538, 0, 65538, 1048572, 0, 65536, 1048573, 0, 65537, 1048574, 0, 65537, 1048575, 0, 65537, 983040, 0, 65537, 983041, 0, 65537, 983042, 0, 65537, 983043, 0, 65537, 983044, 0, 65537, 983045, 0, 65537, 983046, 0, 65537, 983047, 0, 65538, 983072, 0, 65536, 983073, 0, 65537, 983074, 0, 65538, 1114108, 0, 65536, 1114109, 0, 65537, 1114110, 0, 65537, 1114111, 0, 65537, 1048576, 0, 65537, 1048577, 0, 65537, 1048578, 0, 65537, 1048579, 0, 65537, 1048580, 0, 65537, 1048581, 0, 65537, 1048582, 0, 65537, 1048583, 0, 65538, 1048608, 0, 65536, 1048609, 0, 65537, 1048610, 0, 65538, 1179644, 0, 65536, 1179645, 0, 65537, 1179646, 0, 65537, 1179647, 0, 65537, 1114112, 0, 65537, 1114113, 0, 65537, 1114114, 0, 65537, 1114115, 0, 65537, 1114116, 0, 65537, 1114117, 0, 65537, 1114118, 0, 65537, 1114119, 0, 65539, 1114120, 0, 1, 1114121, 0, 1, 1114122, 0, 1, 1114123, 0, 1, 1114124, 0, 1, 1114125, 0, 1, 1114126, 0, 1, 1114127, 0, 1, 1114128, 0, 1, 1114129, 0, 1, 1114130, 0, 1, 1114131, 0, 1, 1114132, 0, 1, 1114133, 0, 1, 1114134, 0, 1, 1114135, 0, 1, 1114136, 0, 1, 1114137, 0, 1, 1114138, 0, 1, 1114139, 0, 1, 1114140, 0, 1, 1114141, 0, 1, 1114142, 0, 1, 1114143, 0, 1, 1114144, 0, 196611, 1114145, 0, 65537, 1114146, 0, 65538, 1245180, 0, 65536, 1245181, 0, 65537, 1245182, 0, 65537, 1245183, 0, 65537, 1179648, 0, 65537, 1179649, 0, 65537, 1179650, 0, 65537, 1179651, 0, 65537, 1179652, 0, 65537, 1179653, 0, 65537, 1179654, 0, 65537, 1179655, 0, 65537, 1179656, 0, 65537, 1179657, 0, 65537, 1179658, 0, 65537, 1179659, 0, 65537, 1179660, 0, 65537, 1179661, 0, 65537, 1179662, 0, 65537, 1179663, 0, 65537, 1179664, 0, 65537, 1179665, 0, 65537, 1179666, 0, 65537, 1179667, 0, 65537, 1179668, 0, 65537, 1179669, 0, 65537, 1179670, 0, 65537, 1179671, 0, 65537, 1179672, 0, 65537, 1179673, 0, 65537, 1179674, 0, 65537, 1179675, 0, 65537, 1179676, 0, 65537, 1179677, 0, 65537, 1179678, 0, 65537, 1179679, 0, 65537, 1179680, 0, 65537, 1179681, 0, 65537, 1179682, 0, 65538, 1310716, 0, 65536, 1310717, 0, 65537, 1310718, 0, 65537, 1310719, 0, 65537, 1245184, 0, 65537, 1245185, 0, 65537, 1245186, 0, 65537, 1245187, 0, 65537, 1245188, 0, 65537, 1245189, 0, 65537, 1245190, 0, 65537, 1245191, 0, 65537, 1245192, 0, 65537, 1245193, 0, 65537, 1245194, 0, 65537, 1245195, 0, 65537, 1245196, 0, 65537, 1245197, 0, 65537, 1245198, 0, 65537, 1245199, 0, 65537, 1245200, 0, 65537, 1245201, 0, 65537, 1245202, 0, 65537, 1245203, 0, 65537, 1245204, 0, 65537, 1245205, 0, 65537, 1245206, 0, 65537, 1245207, 0, 65537, 1245208, 0, 65537, 1245209, 0, 65537, 1245210, 0, 65537, 1245211, 0, 65537, 1245212, 0, 65537, 1245213, 0, 65537, 1245214, 0, 65537, 1245215, 0, 65537, 1245216, 0, 65537, 1245217, 0, 65537, 1245218, 0, 65538, 1376252, 0, 65536, 1376253, 0, 65537, 1376254, 0, 65537, 1376255, 0, 65537, 1310720, 0, 65537, 1310721, 0, 65537, 1310722, 0, 65537, 1310723, 0, 65537, 1310724, 0, 65537, 1310725, 0, 65537, 1310726, 0, 65537, 1310727, 0, 65537, 1310728, 0, 65537, 1310729, 0, 65537, 1310730, 0, 65537, 1310731, 0, 65537, 1310732, 0, 65537, 1310733, 0, 65537, 1310734, 0, 65537, 1310735, 0, 65537, 1310736, 0, 65537, 1310737, 0, 65537, 1310738, 0, 65537, 1310739, 0, 65537, 1310740, 0, 65537, 1310741, 0, 65537, 1310742, 0, 65537, 1310743, 0, 65537, 1310744, 0, 65537, 1310745, 0, 65537, 1310746, 0, 65537, 1310747, 0, 65537, 1310748, 0, 65537, 1310749, 0, 65537, 1310750, 0, 65537, 1310751, 0, 65537, 1310752, 0, 65537, 1310753, 0, 65537, 1310754, 0, 65538, 1441788, 0, 65536, 1441789, 0, 65537, 1441790, 0, 65537, 1441791, 0, 65537, 1376256, 0, 65537, 1376257, 0, 65537, 1376258, 0, 65537, 1376259, 0, 65537, 1376260, 0, 65537, 1376261, 0, 65537, 1376262, 0, 65537, 1376263, 0, 65537, 1376264, 0, 65537, 1376265, 0, 65537, 1376266, 0, 65537, 1376267, 0, 65537, 1376268, 0, 65537, 1376269, 0, 65537, 1376270, 0, 65537, 1376271, 0, 65537, 1376272, 0, 65537, 1376273, 0, 65537, 1376274, 0, 65537, 1376275, 0, 65537, 1376276, 0, 65537, 1376277, 0, 65537, 1376278, 0, 65537, 1376279, 0, 65537, 1376280, 0, 65537, 1376281, 0, 65537, 1376282, 0, 65537, 1376283, 0, 65537, 1376284, 0, 65537, 1376285, 0, 65537, 1376286, 0, 65537, 1376287, 0, 65537, 1376288, 0, 65537, 1376289, 0, 65537, 1376290, 0, 65538, 1507324, 0, 65536, 1507325, 0, 65537, 1507326, 0, 65537, 1507327, 0, 65537, 1441792, 0, 65537, 1441793, 0, 65537, 1441794, 0, 65537, 1441795, 0, 65537, 1441796, 0, 65537, 1441797, 0, 65537, 1441798, 0, 65537, 1441799, 0, 65537, 1441800, 0, 65537, 1441801, 0, 65537, 1441802, 0, 65537, 1441803, 0, 65537, 1441804, 0, 65537, 1441805, 0, 65537, 1441806, 0, 65537, 1441807, 0, 65537, 1441808, 0, 65537, 1441809, 0, 65537, 1441810, 0, 65537, 1441811, 0, 65537, 1441812, 0, 65537, 1441813, 0, 65537, 1441814, 0, 65537, 1441815, 0, 65537, 1441816, 0, 65537, 1441817, 0, 65537, 1441818, 0, 65537, 1441819, 0, 65537, 1441820, 0, 65537, 1441821, 0, 65537, 1441822, 0, 65537, 1441823, 0, 65537, 1441824, 0, 65537, 1441825, 0, 65537, 1441826, 0, 65538, 1572860, 0, 65536, 1572861, 0, 65537, 1572862, 0, 65537, 1572863, 0, 65537, 1507328, 0, 65537, 1507329, 0, 65537, 1507330, 0, 65537, 1507331, 0, 65537, 1507332, 0, 65537, 1507333, 0, 65537, 1507334, 0, 65537, 1507335, 0, 65537, 1507336, 0, 65537, 1507337, 0, 65537, 1507338, 0, 65537, 1507339, 0, 65537, 1507340, 0, 65537, 1507341, 0, 65537, 1507342, 0, 65537, 1507343, 0, 65537, 1507344, 0, 65537, 1507345, 0, 65537, 1507346, 0, 65537, 1507347, 0, 65537, 1507348, 0, 65537, 1507349, 0, 65537, 1507350, 0, 65537, 1507351, 0, 65537, 1507352, 0, 65537, 1507353, 0, 65537, 1507354, 0, 65537, 1507355, 0, 65537, 1507356, 0, 65537, 1507357, 0, 65537, 1507358, 0, 65537, 1507359, 0, 65537, 1507360, 0, 65537, 1507361, 0, 65537, 1507362, 0, 65538, 1638396, 0, 65536, 1638397, 0, 65537, 1638398, 0, 65537, 1638399, 0, 65537, 1572864, 0, 65537, 1572865, 0, 65537, 1572866, 0, 65537, 1572867, 0, 65537, 1572868, 0, 65537, 1572869, 0, 65537, 1572870, 0, 65537, 1572871, 0, 65537, 1572872, 0, 65537, 1572873, 0, 65537, 1572874, 0, 65537, 1572875, 0, 65537, 1572876, 0, 65537, 1572877, 0, 65537, 1572878, 0, 65537, 1572879, 0, 65537, 1572880, 0, 65537, 1572881, 0, 65537, 1572882, 0, 65537, 1572883, 0, 65537, 1572884, 0, 65537, 1572885, 0, 65537, 1572886, 0, 65537, 1572887, 0, 65537, 1572888, 0, 65537, 1572889, 0, 65537, 1572890, 0, 65537, 1572891, 0, 65537, 1572892, 0, 65537, 1572893, 0, 65537, 1572894, 0, 65537, 1572895, 0, 65537, 1572896, 0, 65537, 1572897, 0, 65537, 1572898, 0, 65538, 1703932, 0, 65536, 1703933, 0, 65537, 1703934, 0, 65537, 1703935, 0, 65537, 1638400, 0, 65537, 1638401, 0, 65537, 1638402, 0, 65537, 1638403, 0, 65537, 1638404, 0, 65537, 1638405, 0, 65537, 1638406, 0, 65537, 1638407, 0, 65537, 1638408, 0, 65537, 1638409, 0, 65537, 1638410, 0, 65537, 1638411, 0, 65537, 1638412, 0, 65537, 1638413, 0, 65537, 1638414, 0, 65537, 1638415, 0, 65537, 1638416, 0, 65537, 1638417, 0, 65537, 1638418, 0, 65537, 1638419, 0, 65537, 1638420, 0, 65537, 1638421, 0, 65537, 1638422, 0, 65537, 1638423, 0, 65537, 1638424, 0, 65537, 1638425, 0, 65537, 1638426, 0, 65537, 1638427, 0, 65537, 1638428, 0, 65537, 1638429, 0, 65537, 1638430, 0, 65537, 1638431, 0, 65537, 1638432, 0, 65537, 1638433, 0, 65537, 1638434, 0, 65538, 1769468, 0, 131072, 1769469, 0, 131073, 1769470, 0, 131073, 1769471, 0, 131073, 1703936, 0, 131073, 1703937, 0, 131073, 1703938, 0, 131073, 1703939, 0, 131073, 1703940, 0, 131073, 1703941, 0, 131073, 1703942, 0, 131073, 1703943, 0, 131073, 1703944, 0, 131073, 1703945, 0, 131073, 1703946, 0, 131073, 1703947, 0, 131073, 1703948, 0, 131073, 1703949, 0, 131073, 1703950, 0, 131073, 1703951, 0, 131073, 1703952, 0, 131073, 1703953, 0, 131073, 1703954, 0, 131073, 1703955, 0, 131073, 1703956, 0, 131073, 1703957, 0, 131073, 1703958, 0, 131073, 1703959, 0, 131073, 1703960, 0, 131073, 1703961, 0, 131073, 1703962, 0, 131073, 1703963, 0, 131073, 1703964, 0, 131073, 1703965, 0, 131073, 1703966, 0, 131073, 1703967, 0, 131073, 1703968, 0, 131073, 1703969, 0, 131073, 1703970, 0, 131074 )

[node name="spikes" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
collision_layer = 2
collision_mask = 63
format = 1

[node name="foley" type="Node2D" parent="."]

[node name="tut dash forward" type="Sprite" parent="foley"]
visible = false
position = Vector2( 287.109, 115.527 )
texture = ExtResource( 10 )

[node name="tut dash" type="Sprite" parent="foley"]
visible = false
position = Vector2( 153.415, 169.246 )
texture = ExtResource( 11 )

[node name="mushroom2" parent="foley" instance=ExtResource( 6 )]
position = Vector2( 112, 16 )

[node name="mushroom3" parent="foley" instance=ExtResource( 7 )]
position = Vector2( 336, 112 )

[node name="mushroom1" parent="foley" instance=ExtResource( 8 )]
position = Vector2( 432, 144 )
rotation = 1.57079

[node name="big grass" parent="foley" instance=ExtResource( 9 )]
position = Vector2( 96, 192 )

[node name="big grass13" parent="foley" instance=ExtResource( 9 )]
position = Vector2( 352, 256 )

[node name="big grass14" parent="foley" instance=ExtResource( 9 )]
position = Vector2( 384, 256 )

[node name="big grass15" parent="foley" instance=ExtResource( 9 )]
position = Vector2( 416, 256 )

[node name="big grass16" parent="foley" instance=ExtResource( 9 )]
position = Vector2( 368, 112 )

[node name="big grass17" parent="foley" instance=ExtResource( 9 )]
position = Vector2( 384, 112 )

[node name="big grass2" parent="foley" instance=ExtResource( 9 )]
position = Vector2( 64, 192 )

[node name="big mushroom1" parent="foley" instance=ExtResource( 14 )]
position = Vector2( 496, 240 )

[node name="traanisiton sprite" type="Sprite" parent="foley"]
visible = false
z_index = 50
texture = ExtResource( 13 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="foley"]
"anims/tranisiotn in" = SubResource( 1 )

[node name="transitionshader" parent="foley" instance=ExtResource( 18 )]
visible = false

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="bgnode" type="Node2D" parent="."]

[node name="bg" type="Sprite" parent="bgnode"]
position = Vector2( 235.551, 150.439 )
z_index = -10
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="bg2" type="Sprite" parent="bgnode"]
position = Vector2( 2031.6, 129.057 )
z_index = -10
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="bgtiles" type="TileMap" parent="bgnode"]
z_index = -9
tile_set = ExtResource( 15 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 196632, 7, 0, 262151, 0, 0, 262152, 0, 1, 327687, 0, 65536, 327688, 0, 65537, 524317, 9, 0, 851989, 1, 0, 851990, 1, 1, 917525, 1, 65536, 917526, 1, 65537 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.627451, 0.627451, 0.627451, 1 )

[node name="player" parent="." instance=ExtResource( 3 )]
position = Vector2( 48, 192 )

[node name="camerapos" type="AnimationPlayer" parent="."]
anims/1 = SubResource( 2 )
anims/2 = SubResource( 3 )

[node name="camerapos2" type="Node2D" parent="."]
position = Vector2( 512, 0 )

[node name="health" type="Label" parent="."]
visible = false
margin_left = 32.0
margin_top = 48.0
margin_right = 72.0
margin_bottom = 62.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScreenShake" parent="." instance=ExtResource( 17 )]

[node name="HealthHUD" parent="." instance=ExtResource( 19 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 4 )

[node name="checksoul" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="checksoul"]
position = Vector2( 614.462, 42.4743 )
shape = SubResource( 5 )

[node name="holeTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="hitsound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[node name="changesceneTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="runner" parent="." instance=ExtResource( 5 )]
position = Vector2( 320, 224 )

[node name="newroomexplo" parent="." instance=ExtResource( 20 )]
position = Vector2( 512, 160 )

[node name="eyelazer" parent="." instance=ExtResource( 21 )]
position = Vector2( 208, 120 )

[connection signal="player_passed_door" from="." to="player" method="_on_lvl1_player_passed_door"]
[connection signal="body_entered" from="checksoul" to="." method="_on_checksoul_body_entered"]
[connection signal="timeout" from="holeTimer" to="." method="_on_holeTimer_timeout"]
[connection signal="timeout" from="changesceneTimer" to="." method="_on_changesceneTimer_timeout"]
